OpenVi 7.4.27 -> OpenVi 7.4.28-dev: Tue Feb 13 02:36:11 2024
        + Remove duplicate include statements from xinstall.c
        + Add showfilename set option to display file name; OK millert@ otto@

OpenVi 7.4.26 -> OpenVi 7.4.27: Wed Nov 22 19:30:41 2023
        + Update README file with additional links and packaging information
        + Always suppress db_err output when !lno; closes GitHub Issue #34
        + Update minpwcache.c to OpenBSD pwcache.c v1.16; contains spelling
          fixes from Paul Tagliamonte; only comments, no user-facing change
        + Use openbsd_strlcpy for strlcpy in ptym_open(); fixes compilation
          on AIX and some other System V-derived systems

OpenVi 7.4.25 -> OpenVi 7.4.26: Fri Oct 28 00:15:39 2023
        + Add a fallback path for `altnotation` mode; fixes a crash on macOS
        + Bump MAX_CHARACTER_COLUMNS to 6 for future usage
        + Eliminate strcpy usage in ptym_open function

OpenVi 7.4.24 -> OpenVi 7.4.25: Fri Oct 27 11:44:45 2023
        + Add a new option, `altnotation` (abbreviation `an`), inspired
          by the Nvi2 2.2.1 option of the same name; if set, most control
          characters less than 0x20 will be displayed in <C-char> notation,
          and carriage feed, escape, and delete will be displayed as <Ret>,
          <Esc>, and <Del>, respectively

OpenVi 7.4.23 -> OpenVi 7.4.24: Tue Oct 10 19:47:07 2023
        + Silence a warning when building with recent Clang compilers
        + Treat consecutive paragraph indicators as different paragraphs;
          Consecutive empty lines count toward the same state, so there're
          2x states (to get in and out). `^L` and `.PP` are counted as text,
          hitting those in the text should be treated as getting out of a
          paragraph and then getting in. From Walter Alejandro Iglesias and
          Zhihao Yuan in nvi2; ok bluhm@
        + Fix typo in last ChangeLog entry

OpenVi 7.3.22 -> OpenVi 7.4.23: Sat Jun 24 03:12:41 2023