@@ -1,6 +1,8 @@
-OpenVi 7.4.27 -> OpenVi 7.4.28-dev: Tue Feb 13 02:36:11 2024
+OpenVi 7.4.27 -> OpenVi 7.4.28-dev: Fri Feb 16 11:02:45 2024
         + Remove duplicate include statements from xinstall.c
         + Add showfilename set option to display file name; OK millert@ otto@
+        + Avoid use after free of frp and frp->tname; found by smatch,
+          ok miod@ millert@
 
 OpenVi 7.4.26 -> OpenVi 7.4.27: Wed Nov 22 19:30:41 2023
         + Update README file with additional links and packaging information
